# 3.1.3_BSDiff

./: new.apk  old.apk  patch.diff
app/: build.gradle
app/src/androidTest/java/com/kangjj/ndk/bsdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/kangjj/ndk/bsdiff/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/kangjj/ndk/bsdiff/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
